--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
-body {
+canvas {
+    width: 50vw;
+    height: 50vh;
+}
+
+/*body {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 main > section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1000px;
-    height: 500px;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    height: 40vh;
+    width: 40vw;
     background-color: cyan;
 }
 
 main section section {
+    grid-column: 2/3;
     height: 100%;
-    width: 50%;
+    width: 100%;
     background-color: orange;
     border-radius: 100%;
-}
+}*/
